% fixed problem with scheduling Snap Services

--- a/snapservices/build.gradle
+++ b/snapservices/build.gradle
@@ -59,6 +59,8 @@ android.libraryVariants.all { variant ->
     }
 }
 
+//to upload to bintray, use ./gradlew bintrayUpload
+
 ext {
     bintrayRepo = 'android'
     bintrayName = 'snapservices'
