--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,9 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.4'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
+        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
     }
 }
 
@@ -16,7 +16,7 @@ allprojects {
 
     ext {
         snapProperties = new Properties()
-        snapProperties.load(new FileInputStream("snapservices.properties"))
+        snapProperties.load(new FileInputStream("$rootDir/snapservices.properties"))
     }
 
     repositories {
